cdp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: es-amundsen-service
  namespace: elastic-deployment
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9200
    name: httpelastic
  - port: 9300
    targetPort: 9300
    name: transportelastic
  selector:
    app: es-amundsen
